Actions
Bug #13378
closedunknown ld(1) guidance should be a warning
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
unknown options to ld -zguidance are currently a debug message. They should be a warning, so it's clear something was ignored.
Updated by Rich Lowe over 1 year ago
tested by hand with bad guidance, and in the source tree where I was adding new guidance and found this bug by mistyping in the first place.
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 614a9f681afc3c353478b52a1f8b5ac1cec364d0
commit 614a9f681afc3c353478b52a1f8b5ac1cec364d0 Author: Richard Lowe <richlowe@richlowe.net> Date: 2021-01-14T19:49:41.000Z 13378 unknown ld(1) guidance should be a warning Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Andy Fiddaman <andy@omnios.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions