usr/src/cmd/sgs/libld/common/ldmain.c
@@ -91,8 +91,6 @@ ld_eprintf(Ofl_desc *ofl, Error error, const char *format, ...)
 		ofl->ofl_flags |= FLG_OF_WARN;
 		break;
 	case ERR_GUIDANCE:
-		if ((ofl->ofl_guideflags & FLG_OFG_ENABLE) == 0)
-			return;
 		ofl->ofl_guideflags |= FLG_OFG_ISSUED;
 		ofl->ofl_flags |= FLG_OF_WARN;
 		break;
